[gd_scene load_steps=13 format=3 uid="uid://pqbchs7g1xin"]

[ext_resource type="Script" uid="uid://ckaulke0ddyfl" path="res://Scripts/Map/lucky_cat.gd" id="1_182ps"]
[ext_resource type="Texture2D" uid="uid://dysu50vua1w1v" path="res://Sprites/Town/luckycat.png" id="1_a61ul"]
[ext_resource type="FontFile" uid="uid://bilc72o6ep70t" path="res://Fonts/PixelifySans-VariableFont_wght.ttf" id="2_pfkrl"]
[ext_resource type="Texture2D" uid="uid://cdfjrv25j88kg" path="res://Sprites/Items/Pearl_16.png" id="3_182ps"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_182ps"]
height = 78.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a61ul"]
radius = 65.03076

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgidp"]
bg_color = Color(0.10747967, 0.10747974, 0.10747973, 1)
border_color = Color(0.62967473, 0.62967485, 0.62967455, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 3

[sub_resource type="Animation" id="Animation_k855i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("donate_panel/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel_charm:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel_charm/Label_charm:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.99999994, 0.19408181, 0.27813134, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel_charm:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5fawm"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("donate_panel/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1.1486984),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_182ps"]
resource_name = "more_enemies"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_charm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel_charm/Label_charm:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.99999994, 0.19408181, 0.27813134, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel_charm:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.93333334, 2.4333334, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bgidp"]
resource_name = "more_drops"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_charm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel_charm/Label_charm:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.26036313, 0.66513604, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel_charm:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.93333334, 2.4333334, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_om6qc"]
_data = {
&"RESET": SubResource("Animation_k855i"),
&"idle": SubResource("Animation_5fawm"),
&"more_drops": SubResource("Animation_bgidp"),
&"more_enemies": SubResource("Animation_182ps")
}

[node name="LuckyCat" type="Node2D"]
script = ExtResource("1_182ps")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -3)
rotation = 1.5707964
scale = Vector2(1.2383966, 0.9475356)
shape = SubResource("CapsuleShape2D_182ps")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -50)
texture = ExtResource("1_a61ul")
hframes = 3
frame = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_a61ul")

[node name="Panel_charm" type="Panel" parent="."]
visible = false
offset_left = -73.0
offset_top = -59.0
offset_right = 74.92999
offset_bottom = -35.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(12, 12)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bgidp")

[node name="Label_charm" type="Label" parent="Panel_charm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -12.0
offset_right = 13.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(6.4807873, 7.4807873)
theme_override_colors/font_color = Color(0.99999994, 0.19408181, 0.27813134, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pfkrl")
theme_override_font_sizes/font_size = 19
text = "MORE ENEMIES"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_om6qc")
}
autoplay = "idle"

[node name="donate_panel" type="Node2D" parent="."]
visible = false

[node name="Panel" type="Panel" parent="donate_panel"]
offset_left = -10.800003
offset_top = -108.8
offset_right = 13.199997
offset_bottom = -84.8
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(12, 12)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bgidp")

[node name="Label" type="Label" parent="donate_panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -12.0
offset_right = 13.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(6.4807873, 7.4807873)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pfkrl")
theme_override_font_sizes/font_size = 19
text = "E"
horizontal_alignment = 1

[node name="Panel_donate" type="Panel" parent="donate_panel"]
offset_left = -73.0
offset_top = -68.0
offset_right = 74.92999
offset_bottom = -44.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(12, 12)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_bgidp")

[node name="Label" type="Label" parent="donate_panel/Panel_donate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -12.0
offset_right = 13.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(6.4807873, 7.4807873)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_pfkrl")
theme_override_font_sizes/font_size = 19
text = "DONATE       X3"

[node name="TextureRect" type="TextureRect" parent="donate_panel/Panel_donate"]
layout_mode = 0
offset_left = 89.272736
offset_top = 1.0909069
offset_right = 129.27274
offset_bottom = 41.090908
scale = Vector2(0.5473061, 0.50556856)
texture = ExtResource("3_182ps")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
